@@ -74,12 +74,30 @@ class SD extends BackendAbstract {
 	private function getHostDriver($deviceFile) {
 		$sd = new \OMV\System\Storage\StorageDevice($deviceFile);
 		$sd->assertExists();
+		// Try to get the driver via 'driver'.
 		$hostPath = sprintf("/sys/block/%s/device/../..",
 			$sd->getDeviceName(TRUE));
 		$driverPath = realpath(sprintf("%s/../driver", $hostPath));
-		if (!file_exists($driverPath)) {
-			return "";
+		if (file_exists($driverPath)) {
+			return basename($driverPath);
 		}
-		return basename($driverPath);
+		// Try to get the driver via 'proc_name'.
+		// 'proc_name' is the "name of proc directory" of a driver, if
+		// the driver maintained one.
+		$realDevicePath = realpath(sprintf("/sys/block/%s",
+			$sd->getDeviceName(TRUE)));
+		$hostName = "";
+		foreach (explode("/", $realDevicePath) as $partk => $partv) {
+			if (1 == preg_match("^host\d+$", $partv)) {
+				$hostName = $partv;
+				break;
+			}
+		}
+		$procNamePath = sprintf("/sys/class/scsi_host/%s/proc_name",
+			$hostName);
+		if (file_exists($procNamePath)) {
+			return trim(file_get_contents($procNamePath));
+		}
+		return "";
 	}
 }
